# LDES-ingest

./: README.md
docker/: docker-compose.yml
docker/ldes-ingest/: Dockerfile
docker/ldes-ingest/ldes-ingest-py/: debug-logconf.yml  pyproject.toml
docker/ldes-ingest/ldes-ingest-py/ldes/: __init__.py  __main__.py  ingest.py  schedule.py
docker/lwua-ingest/lwua-py/lwua/: ingest.py
